Added videolectures logo and classes

--- a/src/less/overrides.less
+++ b/src/less/overrides.less
@@ -2,3 +2,12 @@ a.logo > img {
     max-width: 120px;
     max-height: 48px;
 }
+.hover_image:hover img:first-child {
+	display:none
+}
+.hover_image:hover img:last-child {
+	display:inline-block
+}
+.hid {
+	display:none
+}
